# CPGSC

./: CMakeLists.txt  README.NOW
!PG/: CMakeLists.txt  TRAPDOOR.BAT
!PG/SIO/: BUILD.BAT  REBUILD.BAT
!PG/SIO/ASM/: ASM.LIB  ASM.NMK  ASML.LIB  COM1ISR.ASM  COM2ISR.ASM  COM3ISR.ASM  COM4ISR.ASM  CPGSC.ASM  CPGSC.MAC  M.BAT
!PG/SIO/BUOS/: 232_IOFF.C  232_ION.C  BUOS.NMK  M.BAT  NOFLOW.C  RCV_IOFF.C  RCV_ION.C  RTS_CTS.C  SER_IOFF.C  SER_ION.C  S_FGETC.C  S_FPUTC.C  S_GETC.C  S_IFLUSH.C  S_INCHAR.C  S_IRCV.C  S_IRCVST.C  S_IXMIT.C  S_IXMITS.C  S_PUTC.C  S_RCV.C  S_RCVST.C  S_TXEMP.C  S_XMIT.C  S_XMITS.C  TX_IOFF.C  TX_ION.C  VSET232.C  VSETBITS.C  VSETBR.C  VSTAT232.C  XON_XOFF.C
!PG/SIO/CRC/: CRC.C  CRC.NMK  CRC16TAB.C  CRCHWARE.C  CRCREVRS.C  CRCRUPD.C  CRCTAB.C  CRCUPDAT.C  MKCRCTBL.C  POLYDIV.C
!PG/SIO/FAX/: BITS2RUN.C  BMAP2RUN.C  FAX.NMK  M.BAT  MAKEBMP.C  RUN2BITS.C  RUN2BMP.C  RUN2T4.C  T4DECODE.C  T4ENCODE.C  T4ENCTBL.C  T4TORUN.C  T4_TREES.C
!PG/SIO/IBMPC/: A_.RPL  A_SIO.RPL  B_.RPL  B_SIO.RPL  COM1SIO.C  COM2SIO.C  COM3SIO.C  COM4SIO.C  C_.RPL  C_SIO.RPL  D_.RPL  D_SIO.RPL  IBMPC.C  IBMPC.NMK  M.BAT  MAKESIO.BAT  NEWSIO.DOC  TEMPLATE.RPL
!PG/SIO/MISC/: BIGBUFF.C  GETKBCH.C  HAKTC.C  M.BAT  MISC.NMK  PUTBIN.C  RFOPEN.C  STR_ATOI.C  WFOPEN.C
!PG/SIO/MODEM/: M.BAT  MODEM.NMK  M_ANSWER.C  M_CMD.C  M_CMDSTR.C  M_CMD_OK.C  M_CONFIG.C  M_DIAL.C  M_ECHO.C  M_GETSTR.C  M_GOCMD.C  M_HUP.C  M_ISMSG.C  M_PROCFG.C  M_PRSMSG.C  M_REDIAL.C  M_RESET.C  M_UNCFIG.C  M_WHORU.C  M_WRNDCD.C  M_WT4DCD.C
!PG/SIO/PROGS/: M.BAT  PROGS.NMK  TERM7.C  TERM7.RSP
!PG/SIO/TERMFUNC/: CBUFF.C  DIAL_RE.C  DNLOAD.C  LOCBUFF.C  M.BAT  SETFMT.C  SETUP232.C  TERMFUNC.NMK  UPLOAD.C
!PG/SIO/U16X50/: ISR_232.C  ISR_RCV.C  ISR_SERR.C  ISR_TX.C  I_DUMMY.C  M.BAT  S_CONFIG.C  S_IADMIN.C  S_RESTOR.C  S_REVECT.C  U16X50.NMK  UVSET232.C  UVSETBR.C  UVSTAT32.C  UVSTBITS.C  U_INTMGR.C
!PG/SIO/XMODEM/: M.BAT  XMODEM.NMK  X_CVINST.C  X_EXCEPT.C  X_GLOBAL.C  X_MAKPKT.C  X_MSG.C  X_RCV.C  X_RCVCHK.C  X_RCVCRC.C  X_SND.C  X_SNDCHK.C  X_SNDCRC.C
!PG/SIO/_SIO/: ASC_PARM.C  BR2BCODE.C  CLEARERR.C  ER_STRS.C  GET232.C  GETBAUD.C  GETFMAT.C  M.BAT  SET232.C  SETBAUD.C  SETFMAT.C  SIO.NMK  STAT232.C  STATSERR.C  S_CLOSE.C  S_CLRSIO.C  S_FGETLN.C  S_FGETS.C  S_FPUTS.C  S_ICNTRL.C  S_IPHPOP.C  S_KBORT.C  S_OCNTRL.C  S_OPEN.C  S_PSHPOP.C  S_PUTS.C  S_WRITE.C  TR_RCVON.C  TX_IWRIT.C  TX_WRITE.C
!PG/inc/sio/: ascii.h  buos.h  crc.h  ibmpc.h  key.h  level0.h  misc.h  modem.h  sioctl.h  siodef.h  siolocal.h  t4.h  term.h  u16x50.h  uart.h  xmod.h
!PG/src/_sio/: br2bcode.c  clearerr.c  get232.c  getbaud.c  getfmat.c  s_close.c  s_clrsio.c  s_fgetln.c  s_fgets.c  s_fputs.c  s_icntrl.c  s_iphpop.c  s_kbort.c  s_ocntrl.c  s_open.c  s_pshpop.c  s_puts.c  s_write.c  set232.c  setbaud.c  setfmat.c  stat232.c  statserr.c  tr_rcvon.c  tx_iwrit.c  tx_write.c
!PG/src/asm/: asm.nmk  com1isr.asm  com3isr.asm  cpgsc.asm
!PG/src/buos/: 232_ioff.c  232_ion.c  noflow.c  rcv_ioff.c  rcv_ion.c  rts_cts.c  s_fgetc.c  s_fputc.c  s_getc.c  s_iflush.c  s_inchar.c  s_ircv.c  s_ircvst.c  s_ixmit.c  s_ixmits.c  s_putc.c  s_rcv.c  s_rcvst.c  s_txemp.c  s_xmit.c  s_xmits.c  ser_ioff.c  ser_ion.c  tx_ioff.c  tx_ion.c  vset232.c  vsetbits.c  vsetbr.c  vstat232.c  xon_xoff.c
!PG/src/crc/: CMakeLists.txt  crc.c  crc16tab.c  crchware.c  crcrevrs.c  crcrupd.c  crctab.c  crcupdat.c  mkcrctbl.c  polydiv.c
!PG/src/fax/: bits2run.c  bmap2run.c  makebmp.c  run2bits.c  run2bmp.c  run2t4.c  t4_trees.c  t4decode.c  t4encode.c  t4enctbl.c  t4torun.c
!PG/src/ibmpc/: a_.rpl  a_sio.rpl  b_.rpl  b_sio.rpl  c_.rpl  com1sio.c  com2sio.c  com3sio.c  com4sio.c  d_.rpl  d_sio.rpl  ibmpc.c  makesio.bat  newsio.doc  template.rpl
!PG/src/misc/: bigbuff.c  getkbch.c  haktc.c  misc.nmk  putbin.c  rfopen.c  str_atoi.c  wfopen.c
!PG/src/modem/: m_answer.c  m_cmd.c  m_cmd_ok.c  m_cmdstr.c  m_codes.c  m_config.c  m_dial.c  m_echo.c  m_getstr.c  m_gocmd.c  m_hup.c  m_ismsg.c  m_procfg.c  m_prsmsg.c  m_redial.c  m_reset.c  m_uncfig.c  m_whoru.c  m_wrndcd.c  m_wt4dcd.c  modem.nmk
!PG/src/termfunc/: cbuff.c  dial_re.c  dnload.c  locbuff.c  setfmt.c  setup232.c  upload.c
!PG/src/u16x50/: i_dummy.c  isr_232.c  isr_rcv.c  isr_serr.c  isr_tx.c  s_config.c  s_iadmin.c  s_restor.c  s_revect.c  u_intmgr.c  uvset232.c  uvsetbr.c  uvstat32.c  uvstbits.c
!PG/src/xmodem/: x_cvinst.c  x_except.c  x_global.c  x_makpkt.c  x_msg.c  x_rcv.c  x_rcvchk.c  x_rcvcrc.c  x_snd.c  x_sndchk.c  x_sndcrc.c
inc/sio/: ascii.h  buos.h  crc.h  ibmpc.h  key.h  level0.h  misc.h  modem.h  sioctl.h  siodef.h  siolocal.h  t4.h  term.h  u16x50.h  uart.h  xmod.h
src/asm/: CMakeLists.txt  (+7 more)
src/buos/: 232_ioff.c  232_ion.c  CMakeLists.txt  noflow.c  rcv_ioff.c  rcv_ion.c  rts_cts.c  s_fgetc.c  s_fputc.c  s_getc.c  s_iflush.c  s_inchar.c  s_ircv.c  s_ircvst.c  s_ixmit.c  s_ixmits.c  s_putc.c  s_rcv.c  s_rcvst.c  s_txemp.c  s_xmit.c  s_xmits.c  ser_ioff.c  ser_ion.c  tx_ioff.c  tx_ion.c  vset232.c  vsetbits.c  vsetbr.c  vstat232.c  xon_xoff.c
src/crc/: CMakeLists.txt  crc.c  crc16tab.c  crchware.c  crcrevrs.c  crcrupd.c  crctab.c  crcupdat.c  mkcrctbl.c  polydiv.c
src/fax/: CMakeLists.txt  bits2run.c  bmap2run.c  makebmp.c  run2bits.c  run2bmp.c  run2t4.c  t4_trees.c  t4decode.c  t4encode.c  t4enctbl.c  t4torun.c
src/modem/: CMakeLists.txt  m_answer.c  m_cmd.c  m_cmd_ok.c  m_cmdstr.c  m_codes.c  m_config.c  m_dial.c  m_echo.c  m_getstr.c  m_gocmd.c  m_hup.c  m_ismsg.c  m_procfg.c  m_prsmsg.c  m_redial.c  m_reset.c  m_uncfig.c  m_whoru.c  m_wrndcd.c  m_wt4dcd.c
src/sio/: CMakeLists.txt  asc_parm.c  br2bcode.c  clearerr.c  er_strs.c  get232.c  getbaud.c  getfmat.c  s_close.c  s_clrsio.c  s_fgetln.c  s_fgets.c  s_fputs.c  s_icntrl.c  s_iphpop.c  s_kbort.c  s_ocntrl.c  s_open.c  s_pshpop.c  s_puts.c  s_write.c  set232.c  setbaud.c  setfmat.c  stat232.c  statserr.c  tr_rcvon.c  tx_iwrit.c  tx_write.c
src/u16x50/: CMakeLists.txt  i_dummy.c  isr_232.c  isr_rcv.c  isr_serr.c  isr_tx.c  s_config.c  s_iadmin.c  s_restor.c  s_revect.c  u_intmgr.c  uvset232.c  uvsetbr.c  uvstat32.c  uvstbits.c
(+65 files in other folders)
